--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Dependencies
 /node_modules
+BackEnd/node_modules/
+FrontEnd/node_modules/
 /.pnp
 .pnp.js
+
 
 # Testing
 /coverage
@@ -20,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
